# siquid-monitor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: data.md  figures.md  monitoring.md
notebooks/: viz_explore.ipynb
siquid_monitor/: POC_SPEC.md  README.md  __init__.py  app.py  data.py  figures.py
tools/: build_public_docs.py
